Fix vertical alignment of images

--- a/css/bootstrap_override.css
+++ b/css/bootstrap_override.css
@@ -33,3 +33,7 @@ button, input, optgroup, select, textarea {
     -moz-box-sizing: initial;
     box-sizing: initial;
 }
+
+img {
+    vertical-align: inherit;
+}
